syntax = "proto3";

package audit.v1;

import "google/protobuf/timestamp.proto";
import "google/protobuf/struct.proto";
import "buf/validate/validate.proto";

option go_package = "github.com/andrlikjirka/dp-teals/proto/audit/v1;auditv1";

// The audit event message containing all relevant information about the event.
message AuditEvent {
  string id = 1 [(buf.validate.field).required = true];
  google.protobuf.Timestamp timestamp = 2 [(buf.validate.field).required = true];
  Environment environment = 3 ;
  Actor actor = 4 [(buf.validate.field).required = true];
  Subject subject = 5 [(buf.validate.field).required = true];
  Action action = 7 [(buf.validate.field).enum = {defined_only: true, not_in: [0]}];
  Resource resource = 6 [(buf.validate.field).required = true];
  Result result = 8 [(buf.validate.field).required = true];
  google.protobuf.Struct metadata = 9;
}

// ProtectedMetadata holds the encrypted PII metadata envelope for a protected audit event.
message ProtectedMetadata {
  bytes ciphertext = 1;
  bytes wrapped_dek = 2;
  bytes commitment = 3;
}

// ProtectedAuditEvent is the stored form of an audit event with encrypted metadata.
// This is what gets hashed as an MMR leaf and returned to verifiers.
message ProtectedAuditEvent {
  string id = 1;
  google.protobuf.Timestamp timestamp = 2;
  Environment environment = 3;
  Actor actor = 4;
  Subject subject = 5;
  Resource resource = 6;
  Action action = 7;
  Result result = 8;
  optional ProtectedMetadata protected_metadata = 9; // nil if event had no PII metadata
}


// The environment message containing information about the service and trace context of the audit event.
message Environment {
  string service = 1;
  string trace_id = 2;
  string span_id = 3;
}

// The actor message containing information about the actor responsible for the audit event.
message Actor {
  enum Type {
    TYPE_UNSPECIFIED = 0;
    TYPE_USER = 1;
    TYPE_SYSTEM = 2;
  }

  Type type = 1 [(buf.validate.field).enum = {defined_only: true, not_in: [0]}];
  string id = 2 [(buf.validate.field).string.min_len = 1];
}

// The subject message containing information about the personal data subject.
message Subject {
  string id = 1 [(buf.validate.field).string.min_len = 1];
}

// The resource message containing information about the resource involved in the audit event.
message Resource {
  string id = 1 [(buf.validate.field).string.min_len = 1];
  string name = 3 [(buf.validate.field).string.min_len = 1];
  repeated string fields = 4;
}

enum Action {
  ACTION_UNSPECIFIED = 0;
  ACTION_ACCESS = 1;
  ACTION_CREATE = 2;
  ACTION_UPDATE = 3;
  ACTION_DELETE = 4;
  ACTION_SHARE = 5;
  ACTION_EXPORT = 6;
  ACTION_LOGIN = 7;
  ACTION_LOGOUT = 8;
  ACTION_AUTHORIZE = 9;
}

// The result message containing information about the result of the audit event.
message Result {
  enum Status {
    STATUS_UNSPECIFIED = 0;
    STATUS_SUCCESS = 1;
    STATUS_FAILURE = 2;
  }

  Status status = 1 [(buf.validate.field).enum = {defined_only: true, not_in: [0]}];
  optional string reason = 2;
}
